--- a/index.html
+++ b/index.html
@@ -9,14 +9,17 @@
 <body>
     <section class="formulario">
         <form>
-            <h2>Preencha as informações para realizar o login</h2>
+            <img class="imagem" src="img/logo.png" alt="Logo">
             <div class="campo-texto">
-                <label>Login</label>
-                <input type="text" required="true" placeholder="Digite seu login...">
-                <label>Senha</label>
-                <input type="password" required="true" placeholder="Digite sua senha...">
+                <label>Nome</label>
+                <input type="text" required="true" placeholder="Digite seu nome...">
+                <label>Email</label>
+                <input type="text" required="true" placeholder="Digite seu email...">
+                <label>Telefone</label>
+                <input type="text" required="true" placeholder="Digite seu telefone...">
+                <label>Mensagem</label>
+                <input type="text" required="true" placeholder="Digite sua mensagem...">
             </div>
-            <a href="#">Esqueci a senha</a><br>
             <button class="botao">Enviar Formulario</button>
         </form>
     </section>
